<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Settings</string>
    <string name="header_device">Device</string>
    <string name="item_light">Light</string>
    <string name="item_volume">Volume</string>
    <string name="item_theme_background">Theme Background</string>
    <string name="right_background">Gradient</string>
    <string name="item_theme_style">Theme Style</string>
    <string name="right_theme_style">EDU</string>
    <string name="item_device_name">Device Name</string>
    <string name="right_device_name">Smart TV</string>
    <string name="header_network">Network</string>
    <string name="item_wire">Wire</string>
    <string name="item_wifi">Wifi</string>
    <string name="item_pppoe">PPPoE</string>
    <string name="item_hotspot">Hotspot</string>
    <string name="item_bluetooth">Bluetooth</string>
    <string name="status_on">ON</string>
    <string name="status_off">OFF</string>
    <string name="network">Network</string>
    <string name="net_state">Status </string>
    <string name="connect_format">Connection </string>
    <string name="wire_connect">Wired Connection </string>
    <string name="wireless_connect">Wireless Connection </string>
    <string name="screen_hot">Screen hot spot</string>
    <string name="wifi_hotspot">Wireless Hotspot </string>
    <string name="ip_address">IP Addresses </string>
    <string name="subnet_mask">Subnet Mask </string>
    <string name="default_geteway">Default Gateway </string>
    <string name="first_dns">Preferred DNS </string>
    <string name="second_dns">Alternate DNS </string>
    <string name="net_switch">Open Ethernet </string>
    <string name="auto_ip">Automatically Abtain IP Address </string>
    <string name="wifi">Wi-Fi </string>
    <string name="pppoe_connect_format">PPPoE Connection Type</string>
    <string name="username">Username </string>
    <string name="password">Password </string>
    <string name="show_password">Show Password </string>
    <string name="auto_dialer">Boot Automatically Dial </string>
    <string name="ss_id">SSID </string>
    <string name="ss_id1">SSID: </string>
    <string name="ap_type">Hot Spot Type</string>
    <string name="wifi_secure">Safety </string>
    <string name="wifi_secure1">Safety: </string>
    <string name="dialer_hangup">Hang Up </string>
    <string name="dialer_ok">Dial </string>
    <string name="connect_success">Normal Connection </string>
    <string name="connect_break">Disconnect </string>
    <string name="wifi_hotspot1">Wi-Fi Hotspots </string>
    <string name="ethernet_ipv6">IPv6 Mode </string>
    <string name="ethernet_tip">Sorry, the address is wrong, please refer to the automatically obtained address to re-enter.</string>
    <string name="ethernet_tip_2">Manual input, please refer to the automatically obtained address! </string>
    <string name="save_tip">Saved </string>
    <string name="wifi_add_ssid">Add Another </string>
    <string name="wifi_display_status_connecting">connecting··· </string>
    <string name="wifi_display_status_connected">connected </string>
    <string name="password_error">incorrect password </string>
    <string name="disconnect_ethernet">The Wired Network</string>
    <string name="pppoe_connect_success">PPPoE Dial-up Success. </string>
    <string name="pppoe_disconnect">PPPoE Disconnected </string>
    <string name="is_dialing">Dialing ··· </string>
    <string name="input_username">Please enter account name </string>
    <string name="input_password">Please enter your password </string>
    <string name="please_insert_dongle">Please insert the wireless network card </string>
    <string name="device_do_not_support">The wireless card does not support wifi hotspots  </string>
    <string name="open_wifi_ap">Please open wifi hotspots </string>
    <string name="wifiap_pwd_notice">The password should contain at least eight characters, please re-enter </string>
    <string name="please_input_ssid">Please enter the SSID </string>
    <string name="wifiap_config_success">Setting Success </string>
    <string name="title_wifi_app_close">Network share or hotspot closed </string>
    <string name="add_wifi_net">Add Wi-Fi Network </string>
    <string name="wifi_net_ssid">Network SSID </string>
    <string name="wifi_secure_change">Security Has Changed </string>
    <string name="wifi_failed_connect_message">Unable to connect to the network </string>
    <string name="forget">Forget</string>
    <string name="wifi_failed_save_message">Unable To Save The Network </string>
    <string name="not_support_security_hint">Unsupported Encryption Type </string>
    <string name="wifi_failed_forget_message">Unable To Cancel The Network Saved</string>
    <string name="ssid_password_error">SSID Or Password Is Incorrect </string>
    <string name="connect_break_tip">Disconnected, The Network Ts Unavailable </string>
    <string name="connect_state">Connect </string>
    <string name="tip">Tips </string>
    <string name="tip_close">Open Wireless Hotspot, You Must Close:</string>
    <string name="tip_close_wifi">Open Wireless Connection, You Must Close:</string>
    <string name="tip_open_wire">Open Wire Connection, You Must Close:</string>
    <string name="tip_open_pppoe">PPPOE Connection, First:</string>
    <string name="open_wire">Open The Wire Connection</string>
    <string name="confirm_close">Are you sure you want to close?</string>
    <string name="close_wifi_txt">WIFI</string>
    <string name="please_hangup_pppoe">The PPPoE Dial-up Networking</string>
    <string name="close_wifiap_txt">The WIFI Hotspot</string>
    <string name="check_ip_failure">Check IP Address Error</string>
    <string name="check_default_failure">check gateway error</string>
    <string name="check_netmask_failure">check subnet mask error</string>
    <string name="check_dns_failure">check DNS error</string>
    <string-array name="state_addrname_vals">
        <item>Wireless MAC Address</item>
        <item>Wired MAC Address</item>
        <item>IP Addresses  </item>
        <item>Subnet Mask  </item>
        <item>Default Gateway  </item>
        <item>Preferred DNS  </item>
        <item>Alternate DNS  </item>
    </string-array>
    <string name="proxy_error_invalid_host">Hostname isn\'t valid</string>
    <string name="proxy_error_invalid_exclusion_list">This exclusion list isn\’t valid. Enter a comma-separated list of excluded domains.</string>
    <string name="proxy_error_empty_port">Port field can\'t be empty</string>
    <string name="proxy_error_empty_host_set_port">If the host field is empty, leave the port field empty</string>
    <string name="proxy_error_invalid_port">Port isn\'t valid</string>
    <string name="proxy_warning_limited_support">HTTP proxy is used by the browser but may not be used by other apps</string>
    <string name="wifi_security_type_none">None</string>
    <string name="wifi_security_type_wep">WEP</string>
    <string name="wifi_security_type_wpa">WPA/WPA2 PSK</string>
    <string name="wifi_security_type_eap">802.1x EAP</string>
    <string name="pppoe_settings_title">PPPoE</string>
    <string name="pppoe_password">Password</string>
    <string name="pppoe_show_password">Show password</string>
    <string name="pppoe_username">Username</string>
    <string name="save_account_passwd">Save Account and Password</string>
    <string name="pppoe_cancel">Cancel</string>
    <string name="pppoe_connected">Connected</string>
    <string name="pppoe_disconnected">Disconnected</string>
    <string name="pppoe_dialing">Dialing...</string>
    <string name="pppoe_authfailed">AuthFailed</string>
    <string name="pppoe_failed">Failed</string>
    <string name="wifi_display_settings_title">Wireless Display</string>
    <string name="wifi_display_searching_for_devices">On Searching\u2026</string>
    <string name="wifi_display_search_for_devices">Search for displays</string>
    <string name="wifi_display_details">Display settings</string>
    <string name="wifi_display_disconnect_title">Disconnect?</string>
    <string name="wifi_display_options_name">Name </string>
    <string name="wifi_display_options_title">Wireless display options </string>
    <string name="wifi_display_options_done">Done </string>
    <string name="wifi_display_options_forget">Forget </string>
    <string name="lock_settings_picker_title">Select screen lock</string>
    <string name="progress_scanning" msgid="192587958424295789">"Searching"</string>
    <string name="progress_tap_to_pair" msgid="5655704645616731277">""</string>
    <string name="bluetooth_no_devices_found" msgid="1085232930277181436">"No nearby Bluetooth devices were found."</string>
    <string name="tip_open_wifi">Please turn on WiFi firstly</string>
    <string name="display_tip_close">Open Wireless Display, You Must Close:</string>
    <string name="display_toast_fail">Sorry,no burning HDCP2.0 key, Wireless display can not be used. </string>
    <string name="ethernet_tip_ip_same">Sorry,IP Conflict!</string>
    <string name="wifi_ap_submitting">Submitting configuration information ...</string>
    <string name="hot_spot">Hot Spot</string>
    <string name="screen_hot_spot">5G Screen</string>
    <string name="hot_spot_type">5G Hot Spot</string>
    <string name="hot_spot_type_one">2.4G Hot Spot</string>
    <string name="header_general">General</string>
    <string name="item_eye_plus">Eyes Mode</string>
    <string name="item_not_appstore">Allow installation of non-APPStore apps</string>
    <string name="item_touch_sound">Touch Sound</string>
    <string name="item_usb_lock">USB Lock</string>
    <string name="item_floating_button">Floating Ball</string>
    <string name="item_four_distribution">Four Distribution</string>
    <string name="item_triple_bonding">Triple Bonding</string>
    <string name="item_public_usb">USB Share</string>
    <string name="item_alone_backlight">Audio Alone</string>
    <string name="item_headphone_insertion_test">Headphone insertion test</string>
    <string name="item_five_touch">Five finger screen</string>
    <string name="item_lock_screen">Lock screen</string>
    <string name="greneral_usb_lock_title">U disk lock settings</string>
    <string name="greneral_usb_lock_item">U disk lock</string>
    <string name="greneral_usb_lock_tip_title">Reminder</string>
    <string name="greneral_usb_lock_tip_content">&#160;&#160;Please make sure there is no unlock U disk around you. If not, please don\'t turn on this function!</string>
    <string name="header_time_date">Time And Date</string>
    <string name="item_24_hour_format">Use 24-hour format</string>
    <string name="item_automatic">Automatic</string>
    <string name="item_timezone">Timezone</string>
    <string name="right_timezone">Beijing</string>
    <string name="item_time_format">Select date format</string>
    <string name="right_time_format">2019-08-29</string>
    <string name="item_date_and_time">2019-08-29 09:00 pm</string>
    <string name="item_on">Turn on</string>
    <string name="item_off">Off time</string>
    <string name="item_bootup_time">Bootup Time</string>
    <string name="item_repeat">Repeatability</string>
    <string name="tv_repeat">repeat</string>
    <string name="tv_save">save</string>
    <string name="header_security">Security and Privacy</string>
    <string name="item_app_permissions">Application Permissions</string>
    <string name="item_unknown_store">App From Unknown Store</string>
    <string name="item_camera_permissions">Camera Permissions</string>
    <string name="item_udisk_permissions">U Disk Permissions</string>
    <string name="header_about">About</string>
    <string name="item_boot_options">Boot Options</string>
    <string name="right_boot_options">OPS</string>
    <string name="item_upgrade">Upgrade</string>
    <string name="item_system_restore_factory">Restoring the factory state</string>
    <string name="item_about">About</string>
</resources>