<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_security"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_weight="5"
    >

    <TextView
        style="@style/item_title_new"
        android:text="@string/header_security" />

<!--    <LinearLayout
        style="@style/ll_list"
        android:layout_weight="4"
        android:orientation="vertical">-->

        <RelativeLayout
            android:id="@+id/item_app_permissions"
            style="@style/rl_item">

            <TextView
                style="@style/item_textView_new"
                android:text="@string/item_app_permissions" />

            <ImageView
                android:id="@+id/im_item_app_permissions"
                style="@style/more_image_style_new"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_unknown_store"
            style="@style/rl_item">

            <TextView
                android:id="@+id/tv_item_unknown_store"
                style="@style/item_textView_new"
                android:text="@string/item_unknown_store" />

            <ImageView
                android:id="@+id/im_item_unknown_store"
                style="@style/switch_image_style_new"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_camera_permissions"
            style="@style/rl_item"
            android:visibility="gone">

            <TextView
                style="@style/item_textView_new"
                android:text="@string/item_camera_permissions" />

            <ImageView
                android:id="@+id/im_item_camera_permissions"
                style="@style/switch_image_style_new" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_udisk_permissions"
            style="@style/rl_item"
            android:visibility="gone">

            <TextView
                style="@style/item_textView_new"
                android:text="@string/item_udisk_permissions" />

            <ImageView
                android:id="@+id/im_item_udisk_permissions"
                style="@style/switch_image_style_new" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_lock_screen"
            style="@style/rl_item">

            <TextView
                style="@style/item_textView_new"
                android:text="@string/item_lock_screen" />

            <ImageView style="@style/more_image_style_new" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/item_usb_lock"
            style="@style/rl_item">

            <TextView
                style="@style/item_textView_new"
                android:text="@string/item_usb_lock" />

            <ImageView style="@style/more_image_style_new" />

        </RelativeLayout>
    </LinearLayout>
<!--</LinearLayout>-->
