<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lockscreen_ly"
    android:layout_width="match_parent"
    android:layout_height="@dimen/module_height_item_x2"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        style="@style/first_title"
        android:text="@string/greneral_usb_lock_title"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/usb_lock_switch"
        style="@style/rl_item">

        <TextView
            android:id="@+id/tv_item_unknown_store"
            style="@style/item_textView"
            android:text="@string/greneral_usb_lock_item"
            android:textColor="@color/white" />

        <ImageView
            android:id="@+id/usb_lock_switch_iv"
            style="@style/switch_image_style_new"
            android:visibility="visible" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/greneral_list_divider" />

    <RelativeLayout style="@style/rl_item_no_foucse">

        <TextView
            style="@style/item_textview_content"
            android:layout_centerHorizontal="true"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/greneral_usb_lock_tip_title" />
    </RelativeLayout>

    <RelativeLayout style="@style/rl_item_no_foucse">

        <TextView
            style="@style/item_textview_content"
            android:layout_centerHorizontal="true"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/greneral_usb_lock_tip_content" />
    </RelativeLayout>
</LinearLayout>