<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_auto_bootup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        style="@style/first_title"
        android:text="@string/item_on" />

    <LinearLayout
        style="@style/ll_list"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_auto_bootup"
            style="@style/rl_item">

            <TextView
                style="@style/item_textView"
                android:text="@string/item_on" />

            <ImageView
                android:id="@+id/iv_auto_bootup"
                style="@style/switch_image_style_new"
                android:visibility="visible" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/selector_item"
            android:focusable="true">

            <TextView
                style="@style/item_textView"
                android:text="@string/item_bootup_time" />

            <TimePicker
                android:id="@+id/timepicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:theme="@style/Theme.picker"
                android:timePickerMode="spinner" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_repeat"
            style="@style/rl_item">

            <TextView
                style="@style/item_textView"
                android:text="@string/item_repeat" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/iv_left"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/item_left_bg" />

                <TextView
                    android:id="@+id/tv_repeat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/tv_repeat"
                    android:textColor="#ffffff" />

                <ImageView
                    android:id="@+id/iv_right"
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dp"
                    android:background="@drawable/item_rigth_bg" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_save"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/selector_item"
            android:focusable="true">

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="10dp"
                android:background="@drawable/button_bg_shape"
                android:text="@string/tv_save"
                android:textAllCaps="false" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
